<resources>
    <string name="app_name">Employees</string>
    <string name="first_name_label">First name:</string>
    <string name="last_name_label">Last name:</string>
    <string name="test_text">DIO</string>
    <string name="birthday_label">Birthday:</string>
    <string name="speciality_label">Speciality:</string>
    <string name="back_text_view"><![CDATA[< Back]]></string>
    <string name="specialities_appbar_text">Specialities</string>
    <string name="specialities_menu">Seen specialities</string>
    <string name="employees_menu">Employees</string>
    <string name="employees_title">Employees:</string>
    <string name="all_title">All:</string>
    <string name="add_employee_title_menu">Add employee</string>
    <string name="enter_first_name_hint">Enter first name:</string>
    <string name="enter_last_name_hint">Enter last name:</string>
    <string name="enter_birthday_employee_hint">Enter birthday employee:</string>
    <string name="choice_speciality_hint">Choice Speciality:</string>
    <string name="add_employee_text_button">Add Employee</string>
    <string name="choice_date_label">Choice date:</string>
    <string name="add_emplouee_toast">Employee added</string>
    <string name="error_toast">Input data , please</string>
    <string name="error_message">error</string>
    <string name="choose_action_text">Choose action</string>
    <string name="look_text_button">Look</string>
    <string name="remove_text_button">Remove</string>
</resources>