<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_500"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/main_appbar_employee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/main_collapsing_employee"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_margin="@dimen/very_margin"
                    android:id="@+id/add_image_employee"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/color_200"
                    android:fitsSystemWindows="true"
                    android:src="@drawable/ic_baseline_add_a_photo_24"
                    app:layout_collapseMode="parallax" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/main.toolbar.employee"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>


    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/detail_guideline_employee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/name_label_first_name"
                style="@style/TitleText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/very_margin"
                android:text="@string/first_name_label"
                app:layout_constraintEnd_toEndOf="@id/detail_guideline_employee"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name_label_edit"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_margin="@dimen/very_margin"
                android:background="@color/color_200"
                android:hint="@string/enter_first_name_hint"
                app:endIconMode="clear_text"
                app:layout_constraintBottom_toBottomOf="@id/name_label_first_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/detail_guideline_employee"
                app:layout_constraintTop_toTopOf="@id/name_label_first_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/color_200" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/second_name_label_employee"
                style="@style/TitleText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/very_margin"
                android:text="@string/last_name_label"
                app:layout_constraintEnd_toEndOf="@id/detail_guideline_employee"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/name_label_first_name"
                tools:ignore="MissingConstraints" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/last_name_edit"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_margin="@dimen/very_margin"
                android:background="@color/color_200"
                android:hint="@string/enter_last_name_hint"
                app:endIconMode="clear_text"
                app:layout_constraintBottom_toBottomOf="@id/second_name_label_employee"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/detail_guideline_employee"
                app:layout_constraintTop_toTopOf="@id/second_name_label_employee">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/color_200" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/birthday_label_employee"
                style="@style/TitleText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/very_margin"
                android:text="@string/birthday_label"
                app:layout_constraintEnd_toEndOf="@id/detail_guideline_employee"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/second_name_label_employee"
                tools:ignore="MissingConstraints" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/birthday_edit"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_margin="@dimen/very_margin"
                android:background="@color/color_200"
                android:hint="@string/enter_birthday_employee_hint"
                app:endIconMode="clear_text"
                app:layout_constraintBottom_toBottomOf="@id/birthday_label_employee"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/detail_guideline_employee"
                app:layout_constraintTop_toTopOf="@id/birthday_label_employee">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/color_200" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/speciality_label_employee"
                style="@style/TitleText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/very_margin"
                android:text="@string/speciality_label"
                app:layout_constraintEnd_toEndOf="@id/detail_guideline_employee"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/birthday_label_employee"
                tools:ignore="MissingConstraints" />

            <Spinner
                app:layout_constraintTop_toTopOf="@id/speciality_label_employee"
                app:layout_constraintBottom_toBottomOf="@id/speciality_label_employee"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/detail_guideline_employee"
                android:layout_margin="@dimen/very_margin"
                android:id="@+id/speciality_edit"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="45dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>