<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/very_margin"
    android:background="@drawable/border_employee_card_view">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/teal_700">


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/image_avatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_marginLeft="@dimen/small_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/first_name_label"
            style="@style/TitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/very_margin"
            android:layout_marginLeft="@dimen/very_margin"
            android:layout_marginBottom="@dimen/very_margin"
            android:text="@string/first_name_label"
            app:layout_constraintStart_toEndOf="@id/image_avatar"
            app:layout_constraintTop_toTopOf="@id/image_avatar"
            tools:ignore="MissingConstraints" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/last_name_label"
            style="@style/TitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/very_margin"
            android:layout_marginLeft="@dimen/very_margin"
            android:text="@string/last_name_label"
            app:layout_constraintStart_toEndOf="@id/image_avatar"
            app:layout_constraintTop_toBottomOf="@id/first_name_label"
            tools:ignore="MissingConstraints" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/first_name_value"
            style="@style/TitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/very_margin"
            android:layout_marginRight="@dimen/very_margin"
            android:layout_marginBottom="@dimen/very_margin"
            android:text="@string/test_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/first_name_label"
            tools:ignore="MissingConstraints" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/last_name_value"
            style="@style/TitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/very_margin"
            android:layout_marginRight="@dimen/very_margin"
            android:text="@string/test_text"
            app:layout_constraintBottom_toBottomOf="@id/last_name_label"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="MissingConstraints" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>